--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -107,15 +107,17 @@ input:focus {
 
 .login-container {
     display: grid;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     gap: 15px;
     grid-template-columns: 300px;
 }
 
 button {
+    display: inline-block;
     color: white;
     background:rgb(53, 55, 165);
+    margin: 5px;
     font-family: 'DePixel', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 10px;
     border: none;
@@ -124,4 +126,20 @@ button {
 button:hover {
     background:rgb(74, 77, 233);
     cursor: pointer;
+}
+
+.dashboard-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 10px;
+    width: 100%;
+}
+
+.dashboard-section {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
+    outline: solid 3px;
+    outline-color: white;
+    outline-offset: 3px;
 }
